--- a/src/Deploy/Gate.Helpers.nuspec
+++ b/src/Deploy/Gate.Helpers.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>Gate.Helpers</id>
-    <version>0.2.0</version>
-    <authors>Louis DeJardin, Benjamin van der Veen, and contributors</authors>
+    <id>$id$</id>
+    <version>$version$</version>
+    <authors>$authors$</authors>
     <owners></owners>
     <description>Gate is a utility library for locating, manufacturing, and hosting OWIN applications.</description>
     <language>en-US</language>
