--- a/src/Deploy/Gate.Middleware.nuspec
+++ b/src/Deploy/Gate.Middleware.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>Gate.Middleware</id>
-    <version>0.2.0</version>
-    <authors>Louis DeJardin, Benjamin van der Veen, and contributors</authors>
+    <id>$id$</id>
+    <version>$version$</version>
+    <authors>$authors$</authors>
     <owners></owners>
     <description>Gate is a utility library for locating, manufacturing, and hosting OWIN applications.</description>
     <language>en-US</language>
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Gate.Owin" version="0.2.0"/>
+      <dependency id="Gate.Owin" version="$version$"/>
     </dependencies>
   </metadata>
   <files>
