Adding workaround for compiler delegate bug.

--- a/src/Hosts/Gate.Hosts.Manos/Gate.Hosts.Manos.csproj
+++ b/src/Hosts/Gate.Hosts.Manos/Gate.Hosts.Manos.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ErrorPage.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
