--- a/src/Hosts/Gate.HttpListener/Gate.HttpListener.csproj
+++ b/src/Hosts/Gate.HttpListener/Gate.HttpListener.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PipeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
