--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -21,7 +21,7 @@
       This also allows existing modules to run. 
       -->
     <handlers>
-      <add name="Gate" path="*" verb="*" type="Gate.AspNet.Handler, Gate.AspNet" />
+      <add name="Gate" path="*" verb="*" type="Gate.Hosts.AspNet.Handler, Gate.AspNet" />
     </handlers>
 	</system.webServer>
 
