--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -70,9 +70,9 @@
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hosts\Gate.AspNet\Gate.AspNet.csproj">
+    <ProjectReference Include="..\Hosts\Gate.AspNet\Gate.Hosts.AspNet.csproj">
       <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
-      <Name>Gate.AspNet</Name>
+      <Name>Gate.Hosts.AspNet</Name>
     </ProjectReference>
     <ProjectReference Include="..\Hosts\Gate.Kayak\Gate.Kayak.csproj">
       <Project>{D96E8CF9-C2A5-4A35-814C-0B4FE9828B26}</Project>
@@ -125,7 +125,7 @@
     <ItemGroup>
       <NuspecFiles Include="*.nuspec" />
     </ItemGroup>
-    <Exec Command='$(ProjectDir)..\..\.nuget\nuget.exe pack %(NuspecFiles.Identity) -Version $(PackageVersion) -Properties "id=%(NuspecFiles.Filename);authors=HTTP Abstractions Working Group"' WorkingDirectory="$(OutputPath)" />
+    <Exec Command="$(ProjectDir)..\..\.nuget\nuget.exe pack %(NuspecFiles.Identity) -Version $(PackageVersion) -Properties &quot;id=%(NuspecFiles.Filename);authors=HTTP Abstractions Working Group&quot;" WorkingDirectory="$(OutputPath)" />
   </Target>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
 </Project>
