--- a/src/Samples/Sample.AspNet/Sample.AspNet.csproj
+++ b/src/Samples/Sample.AspNet/Sample.AspNet.csproj
@@ -88,9 +88,9 @@
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.AspNet.csproj">
+    <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.Hosts.AspNet.csproj">
       <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
-      <Name>Gate.AspNet</Name>
+      <Name>Gate.Hosts.AspNet</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sample.App\Sample.App.csproj">
       <Project>{0E89EFE3-63CE-4222-9C0B-DD1F5559DAAF}</Project>
