--- a/src/Tests/Gate.AspNet.Tests/Gate.Hosts.AspNet.Tests.csproj
+++ b/src/Tests/Gate.AspNet.Tests/Gate.Hosts.AspNet.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{7459D8FB-7AF8-41FD-AA70-5D88FCC430A0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate.AspNet.Tests</RootNamespace>
-    <AssemblyName>Gate.AspNet.Tests</AssemblyName>
+    <RootNamespace>Gate.Hosts.AspNet.Tests</RootNamespace>
+    <AssemblyName>Gate.Hosts.AspNet.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\Gate\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -69,9 +69,9 @@
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.AspNet.csproj">
+    <ProjectReference Include="..\..\Hosts\Gate.AspNet\Gate.Hosts.AspNet.csproj">
       <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
-      <Name>Gate.AspNet</Name>
+      <Name>Gate.Hosts.AspNet</Name>
     </ProjectReference>
     <ProjectReference Include="..\Gate.TestHelpers\Gate.TestHelpers.csproj">
       <Project>{E4256EDF-0B54-4715-8E66-8D4D4887E15F}</Project>
