--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -5,7 +5,7 @@
     <version>$version$</version>
     <authors>$authors$</authors>
     <owners></owners>
-    <description>Gate.AspNet provides OWIN hosting support for ASP.NET.</description>
+    <description>Gate.Hosts.AspNet provides OWIN hosting support for ASP.NET.</description>
     <language>en-US</language>
     <projectUrl>https://github.com/owin/gate</projectUrl>
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
