--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -8,20 +8,20 @@
 
 	<system.webServer>
     <!-- 
-      Configuring for Gate.AspNet.Module for AppDomain.
+      Configuring for Gate.Hosts.AspNet.Module for AppDomain.
       This bypasses the normal native/managed module pipeline.
       -->
 
     <!--<modules runAllManagedModulesForAllRequests="true">
-			<add name="Gate" type="Gate.AspNet.Module, Gate.AspNet" />
+			<add name="Gate" type="Gate.Hosts.AspNet.Module, Gate.AspNet" />
 		</modules>-->
 
     <!-- 
-      Configuring for Gate.AspNet.Handler for all requests.
+      Configuring for Gate.Hosts.AspNet.Handler for all requests.
       This also allows existing modules to run. 
       -->
     <handlers>
-      <add name="Gate" path="*" verb="*" type="Gate.Hosts.AspNet.Handler, Gate.AspNet" />
+      <add name="Gate" path="*" verb="*" type="Gate.Hosts.AspNet.Handler, Gate.Hosts.AspNet" />
     </handlers>
 	</system.webServer>
 
