--- a/src/Tests/Gate.Kayak.Tests/Gate.Hosts.Kayak.Tests.csproj
+++ b/src/Tests/Gate.Kayak.Tests/Gate.Hosts.Kayak.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D96E8CF9-C2A5-4A35-814C-0B4FE9828B26}</ProjectGuid>
+    <ProjectGuid>{8AA0A98F-FCE3-4DEB-88A2-67B5C8F9845B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate.Kayak</RootNamespace>
-    <AssemblyName>Gate.Kayak</AssemblyName>
+    <RootNamespace>Gate.Hosts.Kayak.Tests</RootNamespace>
+    <AssemblyName>Gate.Hosts.Kayak.Tests</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\Gate\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -35,37 +35,44 @@
     <Reference Include="Kayak, Version=0.7.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Kayak.0.7.2\lib\Kayak.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.mocks, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\nunit.mocks.dll</HintPath>
+    </Reference>
+    <Reference Include="pnunit.framework, Version=1.0.4109.34242, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataConsumer.cs" />
-    <Compile Include="DataProducer.cs" />
-    <Compile Include="Disposable.cs" />
-    <Compile Include="GateRequestDelegate.cs" />
-    <Compile Include="HttpServerExtensions.cs" />
+    <Compile Include="GateRequestDelegateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestEnvironment.cs" />
-    <Compile Include="SchedulerMiddleware.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
-      <Project>{D26293A2-8533-4BF6-A9CC-A88455B0FF71}</Project>
-      <Name>Gate.Builder</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Main\Gate\Gate.csproj">
-      <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
-      <Name>Gate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Main\Gate.Owin\Gate.Owin.csproj">
-      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
-      <Name>Gate.Owin</Name>
-    </ProjectReference>
+    <Compile Include="SchedulerMiddlewareTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Main\Gate\Gate.csproj">
+      <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
+      <Name>Gate</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Hosts\Gate.Kayak\Gate.Hosts.Kayak.csproj">
+      <Project>{D96E8CF9-C2A5-4A35-814C-0B4FE9828B26}</Project>
+      <Name>Gate.Hosts.Kayak</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Main\Gate.Owin\Gate.Owin.csproj">
+      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
+      <Name>Gate.Owin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
