--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -74,7 +74,7 @@
       <Project>{F32E456A-F26E-4C5D-93B8-311941A714E4}</Project>
       <Name>Gate.Hosts.AspNet</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hosts\Gate.Kayak\Gate.Hosts.Kayak.csproj">
+    <ProjectReference Include="..\Hosts\Gate.Hosts.Kayak\Gate.Hosts.Kayak.csproj">
       <Project>{D96E8CF9-C2A5-4A35-814C-0B4FE9828B26}</Project>
       <Name>Gate.Hosts.Kayak</Name>
     </ProjectReference>
