--- a/src/Deploy/Gate.Hosts.HttpListener.nuspec
+++ b/src/Deploy/Gate.Hosts.HttpListener.nuspec
@@ -16,6 +16,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Gate.HttpListener.dll" target="lib\net40" />
+    <file src="Gate.Hosts.HttpListener.dll" target="lib\net40" />
   </files>
 </package>
