--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -46,7 +46,7 @@
       <Project>{A3C2FFB6-663E-4C94-884A-41ADB22DB724}</Project>
       <Name>Gate.Hosts.Manos</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Hosts\Gate.HttpListener\Gate.Hosts.HttpListener.csproj">
+    <ProjectReference Include="..\Hosts\Gate.Hosts.HttpListener\Gate.Hosts.HttpListener.csproj">
       <Project>{A1A94BF6-7E05-430E-947D-B046A2A00CAF}</Project>
       <Name>Gate.Hosts.HttpListener</Name>
     </ProjectReference>
