--- a/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
@@ -60,7 +60,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Hosts\Gate.HttpListener\Gate.Hosts.HttpListener.csproj">
+    <ProjectReference Include="..\..\Hosts\Gate.Hosts.HttpListener\Gate.Hosts.HttpListener.csproj">
       <Project>{A1A94BF6-7E05-430E-947D-B046A2A00CAF}</Project>
       <Name>Gate.Hosts.HttpListener</Name>
     </ProjectReference>
