Adding string constants to help avoid simple typos
Not required, but since there's a Gate.Owin.dll, why not

--- a/src/Main/Gate.Owin/Gate.Owin.csproj
+++ b/src/Main/Gate.Owin/Gate.Owin.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OwinConstants.cs" />
     <Compile Include="Delegates.cs" />
     <Compile Include="IAppBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
