--- a/src/Deploy/Gate.Adapters.Nancy.nuspec
+++ b/src/Deploy/Gate.Adapters.Nancy.nuspec
@@ -5,17 +5,17 @@
     <version>$version$</version>
     <authors>$authors$</authors>
     <owners></owners>
-    <description>Gate is a utility library for locating, manufacturing, and hosting OWIN applications.</description>
+    <description>Gate.Adapters.Nuspec provides OWIN adapter support for Nancy.</description>
     <language>en-US</language>
     <projectUrl>https://github.com/owin/gate</projectUrl>
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
       <dependency id="Gate.Owin" version="$version$"/>
-      <dependency id="Gate" version="$version$"/>
+      <dependency id="Nancy" version="0.9.0"/>
     </dependencies>
   </metadata>
   <files>
-    <file src="Gate.Middleware.dll" target="lib\net40" />
+    <file src="Gate.Adapters.Nancy.dll" target="lib\net40" />
   </files>
 </package>
