--- a/src/Main/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Main/Gate.Middleware/Gate.Middleware.csproj
@@ -44,17 +44,13 @@
     <Compile Include="MethodOverride.cs" />
     <Compile Include="StaticFiles\Mime.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BasicAuth.cs" />
-    <Compile Include="Predicate.cs" />
     <Compile Include="StaticFiles\StateMachine.cs" />
     <Compile Include="Static.cs" />
     <Compile Include="StaticFiles\TextBody.cs" />
-    <Compile Include="Transform.cs" />
     <Compile Include="ContentLength.cs" />
     <Compile Include="Chunked.cs" />
     <Compile Include="Cascade.cs" />
     <Compile Include="ContentType.cs" />
-    <Compile Include="RewindableBody.cs" />
     <Compile Include="ShowExceptions.cs" />
     <Compile Include="ShowExceptions.View.cs">
       <AutoGen>True</AutoGen>
@@ -63,6 +59,7 @@
     </Compile>
     <Compile Include="Utils\HttpFormatExtensions.cs" />
     <Compile Include="Utils\RangeHeader.cs" />
+    <Compile Include="Wilson.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gate.Owin\Gate.Owin.csproj">
