--- a/src/Hosts/Gate.Hosts/Gate.Hosts.csproj
+++ b/src/Hosts/Gate.Hosts/Gate.Hosts.csproj
@@ -5,15 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A1A94BF6-7E05-430E-947D-B046A2A00CAF}</ProjectGuid>
+    <ProjectGuid>{A6FB399F-6D35-45DB-87E6-C841764D5892}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gate.Hosts.HttpListener</RootNamespace>
-    <AssemblyName>Gate.Hosts.HttpListener</AssemblyName>
+    <RootNamespace>Gate.Hosts</RootNamespace>
+    <AssemblyName>Gate.Hosts</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\Gate\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,41 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Gate.Hosts\ErrorPage.cs">
-      <Link>ErrorPage.cs</Link>
-    </Compile>
-    <Compile Include="..\Gate.Hosts\PipeRequest.cs">
-      <Link>PipeRequest.cs</Link>
-    </Compile>
-    <Compile Include="..\Gate.Hosts\PipeResponse.cs">
-      <Link>PipeResponse.cs</Link>
-    </Compile>
+    <Compile Include="ErrorPage.cs" />
+    <Compile Include="PipeRequest.cs" />
+    <Compile Include="PipeResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
-    <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
-      <Project>{D26293A2-8533-4BF6-A9CC-A88455B0FF71}</Project>
-      <Name>Gate.Builder</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\Main\Gate.Owin\Gate.Owin.csproj">
       <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
       <Name>Gate.Owin</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
