--- a/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
@@ -52,8 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerTests.cs" />
-    <Compile Include="Startup.cs" />
+    <None Include="ServerTests.cs" />
+    <None Include="Startup.cs" />
     <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
