--- a/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
+++ b/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
@@ -54,9 +54,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ServerTests.cs" />
+    <None Include="ServerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Startup.cs" />
+    <None Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
