--- a/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
+++ b/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
@@ -53,7 +53,7 @@
       <Link>PipeResponse.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="ServerFactory.cs" />
     <Compile Include="Workaround.cs" />
   </ItemGroup>
   <ItemGroup>
