--- a/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
+++ b/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestEnvironment.cs" />
     <Compile Include="SchedulerMiddleware.cs" />
+    <Compile Include="ServerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
