Fixing up Gate.Middleware.Tests
Also doing some cleanup for classes that were removed

--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -71,20 +71,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="BodyStreamTests.cs" />
+    <Compile Include="StaticFiles\BodyStreamTests.cs" />
     <Compile Include="ContentLengthTests.cs" />
-    <None Include="FileServerTests.cs" />
-    <None Include="MethodOverrideTests.cs" />
-    <None Include="PredicateTests.cs" />
-    <None Include="BasicAuthTests.cs" />
-    <None Include="RangeHeaderTests.cs" />
-    <None Include="StaticTests.cs" />
-    <None Include="TransformTests.cs" />
+    <Compile Include="StaticFiles\FileServerTests.cs" />
+    <Compile Include="MethodOverrideTests.cs" />
+    <Compile Include="StaticFiles\RangeHeaderTests.cs" />
+    <Compile Include="StaticTests.cs" />
     <Compile Include="ChunkedTests.cs" />
-    <None Include="CascadeTests.cs" />
-    <None Include="ContentTypeTests.cs" />
-    <None Include="RewindableBodyTests.cs" />
-    <None Include="ShowExceptionsTests.cs" />
+    <Compile Include="CascadeTests.cs" />
+    <Compile Include="ContentTypeTests.cs" />
+    <Compile Include="ShowExceptionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="public\kayak.png">
