--- a/src/Deploy/Gate.Owin.nuspec
+++ b/src/Deploy/Gate.Owin.nuspec
@@ -5,17 +5,16 @@
     <version>$version$</version>
     <authors>$authors$</authors>
     <owners></owners>
-    <description>Gate.Hosts.Kayak provides OWIN hosting support for Kayak.</description>
+    <description>Obsolete package. Forwarding dependency to Owin.</description>
     <language>en-US</language>
-    <projectUrl>https://github.com/owin/gate</projectUrl>
+    <projectUrl>http://owin.org/</projectUrl>
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
       <dependency id="Owin" version="0.3.0"/>
-      <dependency id="Kayak" version="0.7.2"/>
     </dependencies>
   </metadata>
   <files>
-    <file src="Gate.Hosts.Kayak.dll" target="lib\net40" />
+    <file src="nothing.*" />
   </files>
 </package>
