--- a/src/Hosts/Gate.Hosts.Kayak/packages.config
+++ b/src/Hosts/Gate.Hosts.Kayak/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Kayak" version="0.7.2" />
+  <package id="Owin" version="0.3.0" />
 </packages>
