--- a/src/Main/Ghost.Engine/Ghost.Engine.csproj
+++ b/src/Main/Ghost.Engine/Ghost.Engine.csproj
@@ -48,16 +48,15 @@
     <Reference Include="NDesk.Options">
       <HintPath>..\..\..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
     </Reference>
+    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
       <Project>{D26293A2-8533-4BF6-A9CC-A88455B0FF71}</Project>
       <Name>Gate.Builder</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Gate.Owin\Owin.csproj">
-      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
-      <Name>Owin</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
