--- a/src/Samples/Sample.App/Sample.App.csproj
+++ b/src/Samples/Sample.App/Sample.App.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Nancy.ViewEngines.Spark">
       <HintPath>..\..\..\packages\Nancy.Viewengines.Spark.0.9.0\lib\net40\Nancy.ViewEngines.Spark.dll</HintPath>
     </Reference>
+    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="Spark">
       <HintPath>..\..\..\packages\Spark.1.5.1\lib\NET40\Spark.dll</HintPath>
     </Reference>
@@ -65,10 +68,6 @@
     <ProjectReference Include="..\..\Main\Gate\Gate.csproj">
       <Project>{BE3CCA19-0795-4477-A4D4-ABF45474ACBF}</Project>
       <Name>Gate</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Main\Gate.Owin\Owin.csproj">
-      <Project>{B60C657C-80DA-4AA3-8796-AD920D5EB5A0}</Project>
-      <Name>Owin</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Main\Gate.Middleware\Gate.Middleware.csproj">
       <Project>{60C36D8F-BE53-4733-BD92-CFA103D46020}</Project>
