--- a/src/Hosts/Gate.Hosts.Manos/Gate.Hosts.Manos.csproj
+++ b/src/Hosts/Gate.Hosts.Manos/Gate.Hosts.Manos.csproj
@@ -46,8 +46,8 @@
     <Reference Include="Mono.CSharp">
       <HintPath>..\..\..\dependencies\Mono.2.10.2\lib\net40\Mono.CSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
