--- a/src/Main/Ghost.Engine/Ghost.Engine.csproj
+++ b/src/Main/Ghost.Engine/Ghost.Engine.csproj
@@ -48,8 +48,8 @@
     <Reference Include="NDesk.Options">
       <HintPath>..\..\..\packages\NDesk.Options.0.2.1\lib\NDesk.Options.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
