--- a/src/Samples/Sample.AspNet/packages.config
+++ b/src/Samples/Sample.AspNet/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Nancy" version="0.9.0" />
   <package id="Nancy.Viewengines.Spark" version="0.9.0" />
+  <package id="Owin" version="0.7" />
   <package id="Spark" version="1.5.1" />
 </packages>
