--- a/src/Tests/Gate.Builder.Tests/Gate.Builder.Tests.csproj
+++ b/src/Tests/Gate.Builder.Tests/Gate.Builder.Tests.csproj
@@ -45,8 +45,8 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
