--- a/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
@@ -39,8 +39,8 @@
     <Reference Include="nunit.mocks">
       <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\nunit.mocks.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.3.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Owin.0.3.0\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="pnunit.framework">
       <HintPath>..\..\..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
